# openclaw-app

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOP.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
docker/: Dockerfile.builder
docs/superpowers/plans/: 2026-03-13-openclaw-wizard-backend.md  2026-03-13-openclaw-wizard-cicd.md  2026-03-13-openclaw-wizard-frontend.md  2026-03-13-openclaw-wizard-macos.md
docs/superpowers/specs/: 2026-03-13-openclaw-wizard-redesign.md
resources/: openclaw.desktop  resources.qrc
resources/binaries/: README.md
resources/styles/: wizard.qss
resources/windows/: openclaw.manifest  openclaw.rc
scripts/: build_appimage.sh  build_windows.sh  docker_build.sh  fetch_resources.sh
scripts/macos/: build_bundle.sh  clash.sh  detect.sh  install.command  install_core.sh  service.sh
services/license-server/: .gitignore  deploy.sh  nginx.conf.example  package-lock.json  package.json
services/license-server/src/: db.js  index.js  jwt.js  keygen.js  keymanager.js  watermark.js  wechat.js
services/license-server/src/middleware/: ratelimit.js
services/license-server/src/routes/: activation.js  auth.js  codes.js  payments.js  skills.js
src/: App.vue  DeployWizard.cpp  DeployWizard.h  env.d.ts  main.cpp  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  simple.json
src-tauri/icons/: icon.icns
src-tauri/keys/: license_priv.pem  license_pub.pem
src-tauri/src/: activation.rs  clash_proxy.rs  deploy.rs  lib.rs  license.rs  main.rs  platform_config.rs  service_ctrl.rs  session_state.rs  skills_manager.rs  skills_registry.rs  system_check.rs  tray.rs  updater.rs
src/components/: CheckItem.vue  LogPanel.vue  LoginModal.vue  ManualModal.vue  PasswordStrength.vue  PaymentModal.vue  QrCodeModal.vue  SkillCard.vue  StepHelp.vue  StepIndicator.vue  WizardLayout.vue
src/composables/: useTauri.ts  useWizardNav.ts
src/core/: DeployEngine.cpp  DeployEngine.h  SystemCheck.cpp  SystemCheck.h  UpdateChecker.cpp  UpdateChecker.h
src/pages/: ActivationGatePage.vue  AiTokenPage.vue  ClashConfigPage.vue  ClashDisclaimerPage.vue  DeploymentPage.cpp  DeploymentPage.h  DeploymentPage.vue  FinishPage.cpp  FinishPage.h  FinishPage.vue  InstallConfigPage.cpp  InstallConfigPage.h  InstallConfigPage.vue  PlatformIntegrationPage.cpp  PlatformIntegrationPage.h  PlatformIntegrationPage.vue  ServiceConfigPage.cpp  ServiceConfigPage.h  ServiceConfigPage.vue  SimpleChatTab.vue  SimpleConfigTab.vue  SimpleDashboard.vue  SimpleSkillsTab.vue  SimpleStatusTab.vue  SourcePage.vue  SystemCheckPage.cpp  SystemCheckPage.h  SystemCheckPage.vue  UninstallPage.vue  UpdatePage.vue  WelcomePage.cpp  WelcomePage.h  WelcomePage.vue
src/router/: index.ts
src/stores/: config.ts  license.ts  wizard.ts
tests/: setup.ts
tests/macos/: test_clash.bats  test_detect.bats  test_service.bats
tests/unit/composables/: useTauri.test.ts
tests/unit/pages/: ClashDisclaimerPage.test.ts  DeploymentPage.test.ts  FinishPage.test.ts  PlatformIntegrationPage.test.ts  ServiceConfigPage.test.ts  WelcomePage.test.ts
tests/unit/stores/: config.test.ts  wizard.test.ts
