[package]
name = "openclaw"
version = "1.1.18"
edition = "2021"

[lib]
name = "openclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
secrecy = { version = "0.8", features = ["serde"] }
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
sha2 = "0.10"
hex = "0.4"
semver = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
sysinfo = "0.30"
zip = "2"
libc = "0.2"

tauri = { version = "2", features = ["tray-icon"] }

[features]
bundled = []

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
